# idyntree-superbuild

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
.ci/: brew_install_or_upgrade_formula.sh
cmake/: BuildYARP.cmake  BuildiDynTree.cmake  ExternalProject.cmake
